--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,19 @@
-html,body{ width:100%; height:100%; overflow:hidden;}
-.nav{ box-shadow: 0px 5px 5px #666;  width:100%; height:60px; background:rgba(0,204,204,0.7); position:fixed; left:0; top:0; position: relative; z-index:10;}
-.nav a{ color:#333; width:100%; height:100%; display:block;}
-.nav li{ border-radius:20px; width:25%;height:60px; float:left; text-align:center; line-height:60px; position:relative; z-index:10;}
+html,body{ width:100%; height:100%; overflow:hidden; background:#333;}
+header{ background:#333; padding:20px; padding-bottom:0; transition:1s all ease-in; position:fixed; left:0; top:-100px; width:calc(100% - 40px); z-index:10; height:60px;}
 
-.nav .active{box-shadow:0 0 10px #fff, 0 0 50px #fff, 0 0 80px #fff, 0 0 100px #ff0, 0 0 120px #f00; background:#39c; position:absolute; left:0; top:0; z-index:1; opacity:0.4;}
+header .loog{ color:#ff9; line-height:40px; height:40px; font-size:40px; margin-left:10px; font-weight:bold; font-family:'微软雅黑';}
+.nav{ width:50%; height:40px; position: relative;}
+.nav a{ color:#ff9; width:100%; height:100%; display:block;}
+.nav li{ border-radius:20px; width:25%;height:40px; float:left; text-align:center; line-height:40px;position: relative; z-index:3;}
+
+.nav .active{box-shadow:0 0 80px #fff, 0 0 80px #ff0, 0 0 100px #f00; background:#122; position:absolute; left:0; top:0; z-index:2;}
 
 .box{ position:absolute; left:0; top:0; width:100%; height:100%;}
-.box .box_z{height:calc(100% - 60px); padding-top:60px;}
+.box .box_z{height:calc(100% - 80px); padding-top:80px; background:#191718;}
+.box .box_z:nth-child(1){ background:#333; }
 .return{ position:fixed; right:0; bottom:0; }
-.can_box{ height:100%; width:100%;}
-.can_box #c1{width:100%;}
-
-
+.can_box{ height:100%; width:100%; position:relative; background:#333;}
+.large-header {width: 100%; position:absolute;left:0; top:0; z-index:1;}
 
 
 
