--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ header .loog{ line-height:40px; height:40px; font-size:40px; margin-left:10px; f
 .the3_top{ text-align:center; line-height:40px;}
 .the3_top h2{ margin:20px; }
 .ball{cursor:pointer; background:#122;border-radius:50%; line-height:200px; text-align:center; width:200px; height:200px; position:absolute; left:50%; top:50%; margin-left:-100px; margin-top:-100px;}
-.round{ display:block; border:1px solid #ccc; transition: 0.2s all linear; transform:scale(1); margin:-1px 0 0 -1px;}
+.round{ display:block; border:1px solid #ccc; /* transition: 0.2s all linear; */ transform:scale(1); margin:-1px 0 0 -1px;}
 .ball .btn{ position:absolute; left:0; top:0; width:200px; height:200px; border-radius:50%;}
 .ball .btn2{ display:none;}
 .ball .btn1,.btn2{z-index:1; width:100%; height:100%;}
